# DataStructure

./: .gitignore  CMakeLists.txt  README.md
0201_SqList/: SqList-main.c  SqList.c  SqList.h
0202_LinkList/: LinkList-main.c  LinkList.c  LinkList.h
Status/: Status.c  Status.h
